Bug 316257 - "org.freedesktop.Telepathy.Connection.Interface.ContactInfo" doesn't exist with yahoo
Summary: "org.freedesktop.Telepathy.Connection.Interface.ContactInfo" doesn't exist wi...
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: git-latest
Platform: Other Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-06 22:26 UTC by Alin M Elena
Modified: 2013-04-01 17:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alin M Elena 2013-03-06 22:26:33 UTC
Method "RequestContactInfo" with signature "u" on interface "org.freedesktop.Telepathy.Connection.Interface.ContactInfo" doesn't exist

in contact list on a yahoo contact show info.



Reproducible: Always
Comment 1 David Edmundson 2013-03-06 22:28:52 UTC
Real bug - Tp::PendingOperation results should NOT be shown the to the user

1) They contains nonsense like this
2) They're not i18n
3) They're not even important in this case
Comment 2 David Edmundson 2013-04-01 17:37:19 UTC
Git commit 77b4a75c0054c2aa9de87c06eeef1922ca976084 by David Edmundson.
Committed on 01/04/2013 at 19:34.
Pushed by davidedmundson into branch 'kde-telepathy-0.6'.

Remove KMessageWidget from ContactInfoDialog

It is perfectly valid for upgradeContact() to fail if FeatureInfo is missing
Also we should avoid showing Tp::PendingOperation error messages to the user

REVIEW: 109556

M  +0    -26   KTp/contact-info-dialog.cpp

http://commits.kde.org/telepathy-common-internals/77b4a75c0054c2aa9de87c06eeef1922ca976084