Remove KMessageWidget from ContactInfoDialog

It is perfectly valid for upgradeContact() to fail if FeatureInfo is missing
Also we should avoid showing Tp::PendingOperation error messages to the user

REVIEW: 109556
BUG: 316257