KTp/contact-info-dialog.cpp
@@ -36,7 +36,6 @@
 #include <TelepathyQt/PendingContacts>
 
 #include <KDebug>
-#include <KMessageWidget>
 #include <KTitleWidget>
 #include <KLocalizedString>
 #include <KPushButton>
@@ -80,7 +79,6 @@ class ContactInfoDialog::Private
         editable(false),
         infoDataChanged(false),
         avatarChanged(false),
-        messageWidget(0),
         columnsLayout(0),
         infoLayout(0),
         stateLayout(0),
@@ -109,7 +107,6 @@ class ContactInfoDialog::Private
 
     QMap<InfoRowIndex,QWidget*> infoValueWidgets;
 
-    KMessageWidget *messageWidget;
     QHBoxLayout *columnsLayout;
     QFormLayout *infoLayout;
     QFormLayout *stateLayout;
@@ -123,15 +120,6 @@ class ContactInfoDialog::Private
 
 void ContactInfoDialog::Private::onContactUpgraded(Tp::PendingOperation* op)
 {
-    if (op->isError()) {
-        messageWidget->setMessageType(KMessageWidget::Error);
-        messageWidget->setText(op->errorMessage());
-        messageWidget->setCloseButtonVisible(false);
-        messageWidget->setWordWrap(true);
-        messageWidget->animatedShow();
-        return;
-    }
-
     Tp::PendingContacts *contacts = qobject_cast<Tp::PendingContacts*>(op);
     Q_ASSERT(contacts->contacts().count() == 1);
 
@@ -180,15 +168,6 @@ void ContactInfoDialog::Private::onContactUpgraded(Tp::PendingOperation* op)
 
 void ContactInfoDialog::Private::onContactInfoReceived(Tp::PendingOperation* op)
 {
-    if (op->isError()) {
-        messageWidget->setMessageType(KMessageWidget::Error);
-        messageWidget->setText(op->errorMessage());
-        messageWidget->setCloseButtonVisible(false);
-        messageWidget->setWordWrap(true);
-        messageWidget->animatedShow();
-        return;
-    }
-
     Tp::PendingContactInfo *ci = qobject_cast<Tp::PendingContactInfo*>(op);
     const Tp::ContactInfoFieldList fieldList = ci->infoFields().allFields();
 
@@ -361,11 +340,6 @@ ContactInfoDialog::ContactInfoDialog(const Tp::AccountPtr& account, const Tp::Co
     titleWidget->setText(contact->alias());
     titleWidget->setComment(contact->id());
     layout->addWidget(titleWidget);
-
-    /* Error message to show when an async operation fails */
-    d->messageWidget = new KMessageWidget(this);
-    d->messageWidget->setVisible(false);
-    layout->addWidget(d->messageWidget);
 
     /* 1st column: avatar; 2nd column: details */
     d->columnsLayout = new QHBoxLayout();
